update the teaching link

--- a/CV_tex/yaowp.tex
+++ b/CV_tex/yaowp.tex
@@ -32,8 +32,8 @@ urlcolor=csc,
 	\ecvpersonalinfo
  
  \ecvsection{Summary}
- \ecvtitle{}{\small \rm  \color{black} I am currently a postdoc at Ecole Polytechnique, working in the field of laser-plasma interactions and fusion energy. 
- I have been doing scientific research for over a decade, with strong expertise in both numerical simulations in high-performance computing systems and experimental skills in high-power laser facilities worldwide. I am good at collaboration and project management, and I have strong adaptability and flexibility.}
+ \ecvtitle{}{\small \rm  \color{black} I am currently a postdoc researcher at Ecole Polytechnique, CNRS, working in the field of laser-plasma interactions and fusion energy. 
+ I have been doing scientific research for over a decade, with strong expertise in both numerical simulations in high-performance computing systems and experimental skills in high-power laser facilities worldwide. I am good at collaboration and teamwork, and I have strong adaptability and flexibility.}
  
 
 
@@ -101,7 +101,7 @@ urlcolor=csc,
   
   \ecvtitle{\color{black} \bf Teaching}{\color{black} \small  at Sorbonne University during academic year 2023-2024}
 		\ecvitem{  \rm Master 1 }{ \rm  Numerical Tools in Physics}
-		\ecvitem{  \rm Master 2 }{  \rm Numerical Methods}
+		\ecvitem{  \rm Master 2 }{  \rm \href{https://github.com/weipengyao/Teaching_M2_2023}{Numerical Methods}}
 		
 %	
 %	
