polish the one-page version

--- a/CV_tex/yaowp.tex
+++ b/CV_tex/yaowp.tex
@@ -1,12 +1,12 @@
 \documentclass[english,a4paper,nologo,notitle]{europasscv}
 \ecvname{Weipeng YAO}
-\ecvaddress{3 Rue Bagno à Ripoli, 92350 Le Plessis-Robinson}
-\ecvtelephone{+33 6 43 65 42 49}
+\ecvaddress{Le Plessis-Robinson} \ecvtelephone{+33 6 43 65 42 49}
 \ecvemail{yao.weipeng@polytechnique.edu}
+\ecvhomepage{https://github.com/weipengyao}
 \ecvdateofbirth{- 22/05/1990}
 \ecvnationality{- Chinese}
 \ecvgender{- Male}
-\ecvpicture[width=1.2in]{Photo_WeipengYAO}
+% \ecvpicture[width=1.2in]{Photo_WeipengYAO}
 % \ecvpicture[width=0.8in]{yaowp.jpg}
 \ecvpictureleft
 \usepackage{hyperref}
@@ -33,28 +33,49 @@ urlcolor=csc,
  
  \ecvsection{Summary}
  \ecvtitle{}{\small \rm  \color{black} I am currently a postdoc researcher at Ecole Polytechnique, CNRS, working in the field of laser-plasma interactions and fusion energy. 
- I have been doing scientific research for over a decade, with strong expertise in both numerical simulations in high-performance computing systems and experimental skills in high-power laser facilities worldwide. I am good at collaboration and teamwork, and I have strong adaptability and flexibility.}
+ I have strong expertise in both numerical simulations in high-performance computing (HPC) systems and experimental skills in high-power laser facilities. I am good at collaboration and teamwork, and I have strong adaptability and flexibility.}
  
 
 
  \ecvsection{Work Experience}
-	\ecvtitle{\color{black} 2019 -- Now}{\color{black} \small \bf Laboratoire pour l'Utilisation des Lasers Intenses (\href{https://luli.ip-paris.fr/chercheurs/equipes-de-recherche/sprint-sources-de-particules-rayonnement-intenses}{LULI}), École Polytechnique, Centre national de la recherche scientifique (CNRS)}
+	\ecvtitle{\color{black} 2019 -- Now}{\color{black} \small \bf Laboratoire pour l'Utilisation des Lasers Intenses (\href{https://luli.ip-paris.fr/chercheurs/equipes-de-recherche/sprint-sources-de-particules-rayonnement-intenses}{LULI})}
 	% \ecvitem{Post-doc Researcher}{Advisor: \href{https://portail.polytechnique.edu/luli/en/dr-julien-fuchs}{Julien Fuchs} \& \href{https://sites.google.com/site/andreaciardihomepage/home}{Andrea Ciardi} }
     % \ecvitem{}{\rm \small \bf Investigation of plasma interacting with high-power lasers and strong magnetic fields:}
-    \ecvitem{\color{black} \bf Numerical}{\rm \small using and developping the open-source, collaborative, user-friendly, and massive-parallel plasma simulation codes, i.e., \textbf{\href{https://smileipic.github.io/Smilei/}{SMILEI}} and \textbf{\href{https://epochpic.github.io/}{EPOCH}};}
-    \ecvitem{\color{black} \bf Computational}{\rm \small performing multi-dimensional, large-scale numerical simulations on the world's most powerful high-performance computing systems, i.e., \textbf{\href{https://www.scinethpc.ca/niagara/}{Niagara}} and \textbf{\href{https://en.wikipedia.org/wiki/Sunway_TaihuLight}{Sunway TaihuLight}};}
-    \ecvitem{\color{black} \bf Experimental}{\rm \small using the most powerful laser facilities, i.e., \textbf{\href{https://apollonlaserfacility.cnrs.fr/en/home/}{Apollon}} and \textbf{\href{https://www.clf.stfc.ac.uk/Pages/Vulcan-laser.aspx}{Vulcan}}.All of them involve heavy data analysis and visulization, see details below.}
+    \ecvitem{}{\rm  - open-source and collaborative plasma simulation codes, i.e., \textbf{\href{https://smileipic.github.io/Smilei/}{SMILEI}} and \textbf{\href{https://epochpic.github.io/}{EPOCH}};}
+    \ecvitem{}{\rm - use the world's most powerful HPC systems, i.e., \textbf{\href{https://www.scinethpc.ca/niagara/}{Niagara}} and \textbf{\href{https://en.wikipedia.org/wiki/Sunway_TaihuLight}{Sunway TaihuLight}};}
+    \ecvitem{}{\rm  - use the world's most powerful laser facilities, i.e., \textbf{\href{https://apollonlaserfacility.cnrs.fr/en/home/}{Apollon}} and \textbf{\href{https://www.clf.stfc.ac.uk/Pages/Vulcan-laser.aspx}{Vulcan}}.}
     \ecvitem{}{\bf \small All of them involve heavy data analysis \& visulization, see details in my {\href{https://scholar.google.com/citations?user=gzxsWFIAAAAJ&hl=en}{papers}}.} 
- 
+    
+ \ecvsection{Skills}
+	\ecvtitle{\color{black} \bf Data Analysis}{}
+		\ecvitem{  \rm Proficient }{ \rm  Python, \LaTeX, Linux/Unix, HPC, Adobe illustrator, Fortran, Matlab}
+		\ecvitem{  \rm Master }{  \rm Bash, C++,  VisIt, ParaView, OpenMP/MPI, HDF5}
+		\ecvitem{ \rm Familiar with }{ \rm  Vim,  Inkscape}
+				
+	\ecvtitle{\color{black} \bf Code Projects}{}
+	\ecvitem{\rm 2022 -- Now }{\small  \rm Open source, Particle-in-cell code with adaptive mesh refinement \textbf{\href{https://pharehub.github.io/}{PHARE}}, written in C++}	
+        
+        \ecvitem{\rm 2019 -- Now }{\small  \rm Open source, fully kinetic, massively parallel, Particle-in-cell code \textbf{\href{https://smileipic.github.io/Smilei/}{SMILEI}}, written in C++}
+		\ecvitem{\rm 2019 -- Now }{\small  \rm  Resistive magneto-hydrodynamic code \textbf{GORGON}, written in Fortran}
+		% \ecvitem{\rm 2019 - 2021 }{\small  \rm Proficient in particle module in 3D Ex-MHD code GORGON, written by Fortran.}
+        \ecvitem{\rm 2020 -- 2021 }{\small  \rm Fully integrated particle physics Monte Carlo simulation package \textbf{\href{http://www.fluka.org/fluka.php}{FLUKA}}, written in Fortran}
+		\ecvitem{\rm 2019 -- 2020 }{\small  \rm The radiation hydrodynamic code \textbf{MULTI}, written in C++.}
+		% \ecvitem{\rm 2018 - 2019 }{\small  \rm Familiar with the HEDP Simulation using FLASH Code.}
+		\ecvitem{\rm 2012 -- 2019 }{\small  \rm Open source, fully kinetic, massively parallel, Particle-in-cell code \textbf{\href{https://epochpic.github.io/}{EPOCH}}, written in Fortran.}
+  
+  \ecvtitle{\color{black} \bf Teaching}{\color{black} \rm \small  at Sorbonne University during academic year 2023-2024}
+		\ecvitem{  \rm Master 1 }{ \rm  Numerical Tools in Physics}
+		\ecvitem{  \rm Master 2 }{  \rm \href{https://github.com/weipengyao/Teaching_M2_2023}{Numerical Methods}}
+  
  \ecvsection{Education}  
     
-		\ecvtitle{\color{black} 2015 -- 2019}{\color{black} \small Ph. D.: Plasma Physics, Peking University, Beijing, China (\bf TOP 2)} 	
+		\ecvitem{\rm 2015 -- 2019}{ \rm  Ph. D.: Plasma Physics, Peking University, Beijing, China (\bf TOP 2)} 	
             % \ecvitem{Thesis}{Kinetic study of relativistic jet and plasmas interaction in high energy astrophysics}
 
-		\ecvtitle{\color{black} 2012 -- 2015}{ \color{black} \small Master of Science: Plasma Physics, China Academy of Engineering Physics, Beijing, China}
+		\ecvitem{\rm 2012 -- 2015}{ \rm  Master of Science: Plasma Physics, China Academy of Engineering Physics, Beijing, China}
             % \ecvitem{Thesis}{Particle simulation research on monochromatic proton acceleration via ultra-short ultra-intense laser pulse and multi-component plasma interaction}
   
-  		\ecvtitle{\color{black} 2008 -- 2012}{ \color{black} \small Bachelor of Science: Physics, Shanxi University, Taiyuan, China}
+  		\ecvitem{\rm  2008 -- 2012}{  \rm  Bachelor of Science: Physics, Shanxi University, Taiyuan, China}
 
 
 
@@ -82,26 +103,7 @@ urlcolor=csc,
 % 	\ecvitem{Invited referee, 2015}{ Laser and Particle Beams}
 %	
 %
-\ecvsection{Skills}
-	\ecvtitle{\color{black} \bf Data Analysis}{}
-		\ecvitem{  \rm Proficient }{ \rm  Python, \LaTeX, Linux/Unix, HPC, Adobe illustrator, Fortran, Matlab}
-		\ecvitem{  \rm Master }{  \rm Bash, C++,  VisIt, ParaView, OpenMP/MPI}
-		\ecvitem{ \rm Familiar with }{ \rm  Vim,  Inkscape}
-				
-	\ecvtitle{\color{black} \bf Code Projects}{}
-	\ecvitem{\rm 2022 -- Now }{\small  \rm Open source, Particle-in-cell code with adaptive mesh refinement \textbf{\href{https://pharehub.github.io/}{PHARE}}, written in C++}	
-        
-        \ecvitem{\rm 2019 -- Now }{\small  \rm Open source, fully kinetic, massively parallel, Particle-in-cell code \textbf{\href{https://smileipic.github.io/Smilei/}{SMILEI}}, written in C++}
-		\ecvitem{\rm 2019 -- Now }{\small  \rm  Resistive magneto-hydrodynamic code \textbf{GORGON}, written in Fortran}
-		% \ecvitem{\rm 2019 - 2021 }{\small  \rm Proficient in particle module in 3D Ex-MHD code GORGON, written by Fortran.}
-        \ecvitem{\rm 2020 -- 2021 }{\small  \rm Fully integrated particle physics Monte Carlo simulation package \textbf{\href{http://www.fluka.org/fluka.php}{FLUKA}}, written in Fortran}
-		\ecvitem{\rm 2019 -- 2020 }{\small  \rm The radiation hydrodynamic code \textbf{MULTI}, written in C++.}
-		% \ecvitem{\rm 2018 - 2019 }{\small  \rm Familiar with the HEDP Simulation using FLASH Code.}
-		\ecvitem{\rm 2012 -- 2019 }{\small  \rm Open source, fully kinetic, massively parallel, Particle-in-cell code \textbf{\href{https://epochpic.github.io/}{EPOCH}}, written in Fortran.}
-  
-  \ecvtitle{\color{black} \bf Teaching}{\color{black} \small  at Sorbonne University during academic year 2023-2024}
-		\ecvitem{  \rm Master 1 }{ \rm  Numerical Tools in Physics}
-		\ecvitem{  \rm Master 2 }{  \rm \href{https://github.com/weipengyao/Teaching_M2_2023}{Numerical Methods}}
+
 		
 %	
 %	
