--- a/CV_tex/OnePage.tex
+++ b/CV_tex/OnePage.tex
@@ -1,12 +1,12 @@
 \documentclass[english,a4paper,nologo,notitle]{europasscv}
 \ecvname{Weipeng YAO}
-\ecvaddress{3 Rue Bagno à Ripoli, 92350 Le Plessis-Robinson}
-\ecvtelephone{+33 6 43 65 42 49}
+\ecvaddress{Le Plessis-Robinson} \ecvtelephone{+33 6 43 65 42 49}
 \ecvemail{yao.weipeng@polytechnique.edu}
+\ecvhomepage{https://github.com/weipengyao}
 \ecvdateofbirth{- 22/05/1990}
 \ecvnationality{- Chinese}
 \ecvgender{- Male}
-\ecvpicture[width=1.2in]{Photo_WeipengYAO}
+% \ecvpicture[width=1.2in]{Photo_WeipengYAO}
 % \ecvpicture[width=0.8in]{yaowp.jpg}
 \ecvpictureleft
 \usepackage{hyperref}
@@ -30,39 +30,52 @@ urlcolor=csc,
 	
 	\newpage
 	\ecvpersonalinfo
+ 
+ \ecvsection{Summary}
+ \ecvtitle{}{\small \rm  \color{black} I am currently a postdoc researcher at Ecole Polytechnique, CNRS, working in the field of laser-plasma interactions and fusion energy. 
+ I have strong expertise in both numerical simulations in high-performance computing (HPC) systems and experimental skills in high-power laser facilities. I am good at collaboration and teamwork, and I have strong adaptability and flexibility.}
+ 
 
- 	\ecvsection{Education}  
-		\ecvtitle{\color{black} 09/2015 -- 07/2019}{\color{black} \small Ph. D.: Plasma Physics, School of Physics, Peking University, Beijing, China} 			
-		\ecvtitle{\color{black} 09/2012 -- 07/2015}{ \color{black} \small Master of Science: Plasma Physics, Graduate School of China Academy of Engineering Physics, Beijing, China}
-  		\ecvtitle{\color{black} 09/2008 -- 07/2012}{ \color{black} \small Bachelor of Science: Physics ({\it National Training Bases for Talented Students in Fundamental Sciences}), School of Physics , Shanxi University, Taiyuan, China}
 
+ \ecvsection{Work Experience}
+	\ecvtitle{\color{black} 2019 -- Now}{\color{black} \small \bf Laboratoire pour l'Utilisation des Lasers Intenses (\href{https://luli.ip-paris.fr/chercheurs/equipes-de-recherche/sprint-sources-de-particules-rayonnement-intenses}{LULI})}
+	% \ecvitem{Post-doc Researcher}{Advisor: \href{https://portail.polytechnique.edu/luli/en/dr-julien-fuchs}{Julien Fuchs} \& \href{https://sites.google.com/site/andreaciardihomepage/home}{Andrea Ciardi} }
+    % \ecvitem{}{\rm \small \bf Investigation of plasma interacting with high-power lasers and strong magnetic fields:}
+    \ecvitem{}{\rm  - open-source and collaborative plasma simulation codes, i.e., \textbf{\href{https://smileipic.github.io/Smilei/}{SMILEI}} and \textbf{\href{https://epochpic.github.io/}{EPOCH}};}
+    \ecvitem{}{\rm - use the world's most powerful HPC systems, i.e., \textbf{\href{https://www.scinethpc.ca/niagara/}{Niagara}} and \textbf{\href{https://en.wikipedia.org/wiki/Sunway_TaihuLight}{Sunway TaihuLight}};}
+    \ecvitem{}{\rm  - use the world's most powerful laser facilities, i.e., \textbf{\href{https://apollonlaserfacility.cnrs.fr/en/home/}{Apollon}} and \textbf{\href{https://www.clf.stfc.ac.uk/Pages/Vulcan-laser.aspx}{Vulcan}}.}
+    \ecvitem{}{\bf \small All of them involve heavy data analysis \& visulization, see details in my {\href{https://scholar.google.com/citations?user=gzxsWFIAAAAJ&hl=en}{papers}}.} 
+    
+ \ecvsection{Skills}
+	\ecvtitle{\color{black} \bf Data Analysis}{}
+		\ecvitem{  \rm Proficient }{ \rm  Python, \LaTeX, Linux/Unix, HPC, Adobe illustrator, Fortran, Matlab}
+		\ecvitem{  \rm Master }{  \rm Bash, C++,  VisIt, ParaView, OpenMP/MPI, HDF5}
+		\ecvitem{ \rm Familiar with }{ \rm  Vim,  Inkscape}
+				
+	\ecvtitle{\color{black} \bf Code Projects}{}
+	\ecvitem{\rm 2022 -- Now }{\small  \rm Open source, Particle-in-cell code with adaptive mesh refinement \textbf{\href{https://pharehub.github.io/}{PHARE}}, written in C++}	
+        
+        \ecvitem{\rm 2019 -- Now }{\small  \rm Open source, fully kinetic, massively parallel, Particle-in-cell code \textbf{\href{https://smileipic.github.io/Smilei/}{SMILEI}}, written in C++}
+		\ecvitem{\rm 2019 -- Now }{\small  \rm  Resistive magneto-hydrodynamic code \textbf{GORGON}, written in Fortran}
+		% \ecvitem{\rm 2019 - 2021 }{\small  \rm Proficient in particle module in 3D Ex-MHD code GORGON, written by Fortran.}
+        \ecvitem{\rm 2020 -- 2021 }{\small  \rm Fully integrated particle physics Monte Carlo simulation package \textbf{\href{http://www.fluka.org/fluka.php}{FLUKA}}, written in Fortran}
+		\ecvitem{\rm 2019 -- 2020 }{\small  \rm The radiation hydrodynamic code \textbf{MULTI}, written in C++.}
+		% \ecvitem{\rm 2018 - 2019 }{\small  \rm Familiar with the HEDP Simulation using FLASH Code.}
+		\ecvitem{\rm 2012 -- 2019 }{\small  \rm Open source, fully kinetic, massively parallel, Particle-in-cell code \textbf{\href{https://epochpic.github.io/}{EPOCH}}, written in Fortran.}
+  
+  \ecvtitle{\color{black} \bf Teaching}{\color{black} \rm \small  at Sorbonne University during academic year 2023-2024}
+		\ecvitem{  \rm Master 1 }{ \rm  Numerical Tools in Physics}
+		\ecvitem{  \rm Master 2 }{  \rm \href{https://github.com/weipengyao/Teaching_M2_2023}{Numerical Methods}}
+  
+ \ecvsection{Education}  
+    
+		\ecvitem{\rm 2015 -- 2019}{ \rm  Ph. D.: Plasma Physics, Peking University, Beijing, China (\bf TOP 2)} 	
+            % \ecvitem{Thesis}{Kinetic study of relativistic jet and plasmas interaction in high energy astrophysics}
 
-\ecvsection{Research experience}
-	\ecvtitle{\color{black} 10/2019 -- Now}{\color{black} \small LULI, École Polytechnique and LERMA, Sorbonne Université}
-		\ecvitem{Post-doc Researcher}{Advisor: \href{https://portail.polytechnique.edu/luli/en/dr-julien-fuchs}{Julien Fuchs} \& \href{https://sites.google.com/site/andreaciardihomepage/home}{Andrea Ciardi} }
-		\ecvitem{}{\rm \small Focuses on both theoretical and experimental investigation of laboratory and astrophysical plasma systems under magnetic fields, as well as laser-driven energitic particle sources.}
-
-	\ecvtitle{\color{black} 09/2015 -- 07/2019}{\color{black} \small Center for Applied Physics and Technology, Peking University, Beijing, China}
-		\ecvitem{Ph.D. Candidate}{Advisor: Xian-tu He \& \href{https://faculty.pku.edu.cn/qiaobin/en/index.htm}{Bin Qiao} }
-		\ecvitem{}{\rm \small Focuses on the theoretical study of astrophysical relativistic jet transport in plasma, including the competing of different kinetic instabilities, magnetic reconnection, particle acceleration via collisionless shock and $\gamma$-ray radiation via quantum electrodynamics (QED) effects.}
-		\ecvitem{Thesis}{Kinetic study of relativistic jet and plasmas interaction in high energy astrophysics}
-
-	% \ecvtitle{\color{black} 01/12/2017 -- 29/12/2017}{\color{black} \small Shanghai Institute of Laser Plasma, China Academy of Engineering Physics, Shanghai, China}
-	% 	\ecvitem{Experimental participant}{Advisor: Prof. Wenbin Pei}
-	% 	\ecvitem{}{\rm \small Focuses on the asymmetrical laser-driven magnetic reconnection (MR) using proton radiography at SG-II-upgrade laser facility.}
-
-	\ecvtitle{\color{black} 09/2012 -- 07/2015}{\color{black} \small Graduate School of China Academy of Engineering Physics, Beijing, China}
-		\ecvitem{Master Candidate}{Advisor: Prof. Baiwen Li}
-		\ecvitem{}{\rm \small Focuses on the theoretical investigation of high-energy and high-quality proton beam generation based on laser plasma interaction.}
-		\ecvitem{Thesis}{Particle simulation research on monochromatic proton acceleration via ultra-short ultra-intense laser pulse and multi-component plasma interaction}
-		
-		
-\ecvsection{Recent Research Interests}
-	
-	\ecvitem{}{\color{black}  \rm With the development of laser technology, it will be more and more convenient to create plasmas under high-energy-density (HED) regime in laboratory. My research interest lies in this new, physically rich and exciting area at the intersection of traditional plasma physics, high-energy astrophysics and HED plasma physics. 
-    Specifically, I am interested in the origin of cosmic rays, which is believed to be accelerated from collisonless shocks, especially when magnetic field effects are non-negligible. In addition, I am also interested in the laser-driven ultra-bright neutron source, which opens up the laboratory investigations of the nucleosynthesis of heavy elements, by using ultra-intense short-pulse laser facilities, e.g., Apollon. Besides, the advanced numerical modeling of related systems with both kinetic Particle-in-Cell (PIC) codes and extended magnetohydrodynamic (MHD) codes are also my research interests. 
-    \bf For an up to date and exhaustive list of articles see my profile on {\href{https://scholar.google.com/citations?hl=en&user=gzxsWFIAAAAJ}{\underline{google scholar}}}
-    }
+		\ecvitem{\rm 2012 -- 2015}{ \rm  Master of Science: Plasma Physics, China Academy of Engineering Physics, Beijing, China}
+            % \ecvitem{Thesis}{Particle simulation research on monochromatic proton acceleration via ultra-short ultra-intense laser pulse and multi-component plasma interaction}
+  
+  		\ecvitem{\rm  2008 -- 2012}{  \rm  Bachelor of Science: Physics, Shanxi University, Taiyuan, China}
 
 	                 
   	\end{europasscv}
