--- a/CV_tex/OnePage.tex
+++ b/CV_tex/OnePage.tex
@@ -50,7 +50,7 @@ urlcolor=csc,
 	\ecvtitle{\color{black} \bf Data Analysis}{}
 		\ecvitem{  \rm Proficient }{ \rm  Python, \LaTeX, Linux/Unix, HPC, Adobe illustrator, Fortran, Matlab}
 		\ecvitem{  \rm Master }{  \rm Bash, C++,  VisIt, ParaView, OpenMP/MPI, HDF5}
-		\ecvitem{ \rm Familiar with }{ \rm  Vim,  Inkscape}
+		\ecvitem{ \rm Familiar with }{ \rm  Vim,  Inkscape, ML}
 				
 	\ecvtitle{\color{black} \bf Code Projects}{}
 	\ecvitem{\rm 2022 -- Now }{\small  \rm Open source, Particle-in-cell code with adaptive mesh refinement \textbf{\href{https://pharehub.github.io/}{PHARE}}, written in C++}	
