better summary including language

--- a/CV_tex/OnePage.tex
+++ b/CV_tex/OnePage.tex
@@ -32,8 +32,8 @@ urlcolor=csc,
 	\ecvpersonalinfo
  
  \ecvsection{Summary}
- \ecvtitle{}{\small \rm  \color{black} I am currently a postdoc researcher at Ecole Polytechnique, CNRS, working in the field of laser-plasma interactions and fusion energy. 
- I have strong expertise in both numerical simulations in high-performance computing (HPC) systems and experimental skills in high-power laser facilities. I am good at collaboration and teamwork, and I have strong adaptability and flexibility.}
+ \ecvtitle{}{\small \rm  \color{black} Over 10 years of international research experience on laser-plasma interactions and fusion energy.  
+ Strong expertise in both numerical simulations in high-performance computing (HPC) systems and experimental skills in high-power laser facilities. Good at collaboration and communication. Trilingual: Chinese, English, French.}
  
 
 
